--- a/Exercise 1 – Extension methods/Exercise 1 – Extension methods.csproj
+++ b/Exercise 1 – Extension methods/Exercise 1 – Extension methods.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>C__1x2_Lab_3</RootNamespace>
+    <RootNamespace>Exercise_1___Extension_methods</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
